--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "vite"
+    "start": "vite",
+    "build": "tsc -b && vite build"
   },
   "keywords": [],
   "author": "",
